# density_segmentation_gui

./: .gitignore  DICOM_OPTIMIZATION_GUIDE.md  README.md  README_SAM2.md  SAM2_POSTPROCESSING_SUMMARY.md  install_cuda_torch.ps1  install_pytorch.ps1  install_pytorch.sh  main.py  pyproject.toml  requirements.txt  temp_ending.py
.streamlit/: config.toml
checkpoints/: README.md
src/: DicomCache.py  ImageLoader.py  advanced_pipeline_step.py  app.py  batch_draw_step.py  batch_process_step.py  batch_sam2_process_step.py  batch_sam2_process_step_new.py  batch_sam2_process_step_old.py  batch_threshold_step.py  dicom_converter.py  draw_step.py  file_selection_step.py  imageloader.py  muscular_segmentation.py  new_proposed_approach.py  new_utils.py  performance_config.py  process_step.py  sam2_postprocess_helpers.py  sam2_simple_approach.py  sam_draw_step.py  sam_inference.py  sam_main.py  sam_propagation.py  sam_threshold_auto.py  sam_utils.py  threshold_step.py  utils.py
static/: advanced_pipeline_step.css  app.css  batch_draw_step.css  batch_process_step.css  batch_threshold_step.css  file_selection_step.css
