[project]
name = "density-segmentation-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "nibabel>=5.3.2",
    "opencv-python>=4.12.0.88",
    "streamlit==1.40.0",
    "streamlit-drawable-canvas>=0.9.3",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "supervision>=0.16.0",
]
