[project]
name = "density-segmentation-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "nibabel>=5.3.2",
    "opencv-python>=4.12.0.88",
    "pydicom>=3.0.1",
    "streamlit==1.40.0",
    "streamlit-drawable-canvas>=0.9.3",
]
